updates to ESxi doc//Nov17

--- a/nvme_esxi_7.adoc
+++ b/nvme_esxi_7.adoc
@@ -32,9 +32,7 @@ The following configurations are not supported:
 * VVols
 
 
-== NVMe/FC
-
-=== Configuring  NVMe/FC
+== Enabling NVMe/FC
 
 .	Check the ESXi host NQN string and verify that it matches with the host NQN string for the corresponding subsystem on the ONTAP array:
 +
@@ -48,7 +46,7 @@ Host NQN: nqn.2014-08.com.vmware:nvme:nvme-esx
   vserver_nvme ss_vserver_nvme nqn.2014-08.com.vmware:nvme:nvme-esx
 ----
 
-=== Broadcom/Emulex
+=== Configuring Broadcom/Emulex
 
 .	Check whether the configuration is supported with required driver/firmware by referring to link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix].
 
@@ -71,7 +69,7 @@ vmhba64   lpfc     link-up     fc.200000109b95456f:100000109b95456f             
 vmhba65   lpfc     link-up     fc.200000109b954570:100000109b954570                       (0000:86:00.1) Emulex Corporation Emulex LPe36000 Fibre Channel Adapter   NVMe HBA
 ----
 
-=== Marvell/QLogic
+=== Configuring Marvell/QLogic
 
 .	Check whether configuration is supported with required driver/firmware by referring to link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix].
 
