--- a/nvme_esxi_7.adoc
+++ b/nvme_esxi_7.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: nvme_esxi_7.html
 keywords: nvme, esxi, ontap
-summary: Describes how to configure NVMe/FC for ESXi 7.0 with ONTAP
+summary: Describes how to configure NVMe/FC for ESXi 7.x with ONTAP
 ---
 
 = NVMe-oF Host Configuration for ESXi 7.x with ONTAP
@@ -139,7 +139,7 @@ NOTE: In ONTAP 9.7, the default block size for a NVMe/FC namespace is 4K. This d
 +
 `vserver nvme namespace create -vserver vs_1 -path /vol/nsvol/namespace1 -size 100g -ostype vmware -block-size 512B`
 +
-Refer to the link:https://docs.netapp.com/ontap-9/index.jsp?topic=%2Fcom.netapp.doc.dot-cm-cmpr-970%2Fvserver__nvme__namespace__create.html[ONTAP 9 Command man pages] for additional details.
+Refer to the link:https://docs.netapp.com/ontap-9/index.jsp?topic=%2Fcom.netapp.doc.dot-cm-cmpr%2FGUID-5CB10C70-AC11-41C0-8C16-B4D0DF916E9B.html[ONTAP 9 Command man pages] for additional details.
 
 . Verify the status of the individual ANA paths of the respective NVMe/FC namespace devices:
 +
