added -pdf filename keyword in yml

--- a/nvme_esxi_7.adoc
+++ b/nvme_esxi_7.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: nvme_esxi_7.html
 keywords: nvme, esxi, ontap
-summary: Describes how to configure NVMe/FC for ESXi 7.x with ONTAP
+summary: Describes how to configure NVMe-oF for ESXi 7.x with ONTAP
 ---
 
 = NVMe-oF Host Configuration for ESXi 7.x with ONTAP
